--- a/style.css
+++ b/style.css
@@ -121,14 +121,14 @@ main {
     height: 576px;
 }
 
-/* Brainy image - keep at original size (not enlarged) */
+/* Brainy image - 15% larger than base size */
 .app[data-index="4"] img {
-    width: 100%;
-    height: 600px;
+    width: 138%;
+    height: 828px;
 }
 
 .app[data-index="4"] .app-image {
-    height: 600px;
+    height: 828px;
 }
 
 .app:hover img {
@@ -278,12 +278,12 @@ footer {
     }
     
     .app[data-index="4"] img {
-        width: 100%;
-        height: 500px;
+        width: 138%;
+        height: 690px;
     }
     
     .app[data-index="4"] .app-image {
-        height: 500px;
+        height: 690px;
     }
     
     .app-content {
@@ -337,12 +337,12 @@ footer {
     }
     
     .app[data-index="4"] img {
-        width: 100%;
-        height: 400px;
+        width: 138%;
+        height: 552px;
     }
     
     .app[data-index="4"] .app-image {
-        height: 400px;
+        height: 552px;
     }
     
     .app {
